# DataForge

./: Cargo.toml  pyproject.toml
python/dataforge/: hf_executor.py  operation.py  pipeline.py
src/: lib.rs
